feat: working refs without tests
